; ModuleID = '/home/carl/AnghaBench/micropython/lib/littlefs/extr_lfs2.c_lfs2_dir_commit_commit.c'
source_filename = "/home/carl/AnghaBench/micropython/lib/littlefs/extr_lfs2.c_lfs2_dir_commit_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lfs2_dir_commit_commit = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*)* @lfs2_dir_commit_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lfs2_dir_commit_commit(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.lfs2_dir_commit_commit*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.lfs2_dir_commit_commit*
  store %struct.lfs2_dir_commit_commit* %9, %struct.lfs2_dir_commit_commit** %7, align 8
  %10 = load %struct.lfs2_dir_commit_commit*, %struct.lfs2_dir_commit_commit** %7, align 8
  %11 = getelementptr inbounds %struct.lfs2_dir_commit_commit, %struct.lfs2_dir_commit_commit* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.lfs2_dir_commit_commit*, %struct.lfs2_dir_commit_commit** %7, align 8
  %14 = getelementptr inbounds %struct.lfs2_dir_commit_commit, %struct.lfs2_dir_commit_commit* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @lfs2_dir_commitattr(i32 %12, i32 %15, i32 %16, i8* %17)
  ret i32 %18
}

declare dso_local i32 @lfs2_dir_commitattr(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
